# ecs_docker_app

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: main.yml
tests/: test_ecs_docker_app.py
