[tool.poetry]
name = "ecs_docker_app"
version = "0.1.0"
description = ""
authors = ["Jacob Lappin Sadiq <jlappinsadiq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
mysql-connector-python = "^8.0.28"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
